added svgs for elements

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="results-tree__row">    
       <div class="results-tree__result bubble mushroom foot purple-border gold-back"></div>
       <div class="results-tree__result bubble fern flower green-border blue-back"></div>
-      <div class="results-tree__result bubble toad feather sienna-border tan-back"></div>
+      <div class="results-tree__result bubble toad root sienna-border tan-back"></div>
       <div class="results-tree__result bubble foot scorpion gold-border red-back"></div>
       <div class="results-tree__result bubble flower feather blue-border dimgray-back"></div>
     </div>                             
@@ -179,7 +179,7 @@
     <div class="results-tree__row">    
       <div class="results-tree__result bubble mushroom fern purple-border green-back"></div>
       <div class="results-tree__result bubble fern toad green-border sienna-back"></div>
-      <div class="results-tree__result bubble toad feather sienna-border gold-back"></div>
+      <div class="results-tree__result bubble toad foot sienna-border gold-back"></div>
       <div class="results-tree__result bubble foot flower gold-border blue-back"></div>
       <div class="results-tree__result bubble flower root blue-border tan-back"></div>
       <div class="results-tree__result bubble root scorpion tan-border red-back"></div>
@@ -200,84 +200,212 @@
   </div>
   <div id="grid" class="answer-grid">
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type1 purple-soft red-minus green-plus blue-minus blue-big false"></div>
-      <div class="answer-grid__answer type1 green-soft red-minus green-plus blue-minus blue-big false"></div>
-      <div class="answer-grid__answer type1 sienna-soft red-minus green-plus blue-minus blue-big false"></div>
-      <div class="answer-grid__answer type1 gold-soft red-minus green-plus blue-minus blue-big false"></div>
-      <div class="answer-grid__answer type1 blue-soft red-minus green-plus blue-minus blue-big false"></div>
-      <div class="answer-grid__answer type1 tan-soft red-minus green-plus blue-minus blue-big false"></div>
-      <div class="answer-grid__answer type1 red-soft red-minus green-plus blue-minus blue-big false"></div>
-      <div class="answer-grid__answer type1 dimgray-soft red-minus green-plus blue-minus blue-big false guess"></div>
+      <div class="answer-grid__answer type1 purple-soft red-minus green-plus blue-minus blue-big false">
+        <img src="elements/rs-gs+BL-.svg">
+      </div>
+      <div class="answer-grid__answer type1 green-soft red-minus green-plus blue-minus blue-big false">
+        <img src="elements/rs-gs+BL-.svg">
+      </div>
+      <div class="answer-grid__answer type1 sienna-soft red-minus green-plus blue-minus blue-big false">
+        <img src="elements/rs-gs+BL-.svg">
+      </div>
+      <div class="answer-grid__answer type1 gold-soft red-minus green-plus blue-minus blue-big false">
+        <img src="elements/rs-gs+BL-.svg">
+      </div>
+      <div class="answer-grid__answer type1 blue-soft red-minus green-plus blue-minus blue-big false">
+        <img src="elements/rs-gs+BL-.svg">
+      </div>
+      <div class="answer-grid__answer type1 tan-soft red-minus green-plus blue-minus blue-big false">
+        <img src="elements/rs-gs+BL-.svg">
+      </div>
+      <div class="answer-grid__answer type1 red-soft red-minus green-plus blue-minus blue-big false">
+        <img src="elements/rs-gs+BL-.svg">
+      </div>
+      <div class="answer-grid__answer type1 dimgray-soft red-minus green-plus blue-minus blue-big false guess">
+        <img src="elements/rs-gs+BL-.svg">
+      </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type2 purple-soft red-plus green-minus blue-plus blue-big true"></div>
-      <div class="answer-grid__answer type2 green-soft red-plus green-minus blue-plus blue-big true"></div>
-      <div class="answer-grid__answer type2 sienna-soft red-plus green-minus blue-plus blue-big true"></div>
-      <div class="answer-grid__answer type2 gold-soft red-plus green-minus blue-plus blue-big true"></div>
-      <div class="answer-grid__answer type2 blue-soft red-plus green-minus blue-plus blue-big true guess"></div>
-      <div class="answer-grid__answer type2 tan-soft red-plus green-minus blue-plus blue-big true"></div>
-      <div class="answer-grid__answer type2 red-soft red-plus green-minus blue-plus blue-big true"></div>
-      <div class="answer-grid__answer type2 dimgray-soft red-plus green-minus blue-plus blue-big true"></div>
+      <div class="answer-grid__answer type2 purple-soft red-plus green-minus blue-plus blue-big true">
+        <img src="elements/rs+gs-BL+.svg">
+      </div>
+      <div class="answer-grid__answer type2 green-soft red-plus green-minus blue-plus blue-big true">
+        <img src="elements/rs+gs-BL+.svg">
+      </div>
+      <div class="answer-grid__answer type2 sienna-soft red-plus green-minus blue-plus blue-big true">
+        <img src="elements/rs+gs-BL+.svg">
+      </div>
+      <div class="answer-grid__answer type2 gold-soft red-plus green-minus blue-plus blue-big true">
+        <img src="elements/rs+gs-BL+.svg">
+      </div>
+      <div class="answer-grid__answer type2 blue-soft red-plus green-minus blue-plus blue-big true guess">
+        <img src="elements/rs+gs-BL+.svg">
+      </div>
+      <div class="answer-grid__answer type2 tan-soft red-plus green-minus blue-plus blue-big true">
+        <img src="elements/rs+gs-BL+.svg">
+      </div>
+      <div class="answer-grid__answer type2 red-soft red-plus green-minus blue-plus blue-big true">
+        <img src="elements/rs+gs-BL+.svg">
+      </div>
+      <div class="answer-grid__answer type2 dimgray-soft red-plus green-minus blue-plus blue-big true">
+        <img src="elements/rs+gs-BL+.svg">
+      </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type3 purple-soft red-plus green-minus blue-minus green-big"></div>
-      <div class="answer-grid__answer type3 green-soft red-plus green-minus blue-minus green-big"></div>
-      <div class="answer-grid__answer type3 sienna-soft red-plus green-minus blue-minus green-big"></div>
-      <div class="answer-grid__answer type3 gold-soft red-plus green-minus blue-minus green-big"></div>
-      <div class="answer-grid__answer type3 blue-soft red-plus green-minus blue-minus green-big"></div>
-      <div class="answer-grid__answer type3 tan-soft red-plus green-minus blue-minus green-big"></div>
-      <div class="answer-grid__answer type3 red-soft red-plus green-minus blue-minus green-big"></div>
-      <div class="answer-grid__answer type3 dimgray-soft red-plus green-minus blue-minus green-big"></div>
+      <div class="answer-grid__answer type3 purple-soft red-plus green-minus blue-minus green-big">
+        <img src="elements/rs+GL-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type3 green-soft red-plus green-minus blue-minus green-big">
+        <img src="elements/rs+GL-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type3 sienna-soft red-plus green-minus blue-minus green-big">
+        <img src="elements/rs+GL-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type3 gold-soft red-plus green-minus blue-minus green-big">
+        <img src="elements/rs+GL-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type3 blue-soft red-plus green-minus blue-minus green-big">
+        <img src="elements/rs+GL-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type3 tan-soft red-plus green-minus blue-minus green-big">
+        <img src="elements/rs+GL-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type3 red-soft red-plus green-minus blue-minus green-big">
+        <img src="elements/rs+GL-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type3 dimgray-soft red-plus green-minus blue-minus green-big">
+        <img src="elements/rs+GL-bs-.svg">
+      </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type4 purple-soft red-minus green-plus blue-plus green-big"></div>
-      <div class="answer-grid__answer type4 green-soft red-minus green-plus blue-plus green-big"></div>
-      <div class="answer-grid__answer type4 sienna-soft red-minus green-plus blue-plus green-big"></div>
-      <div class="answer-grid__answer type4 gold-soft red-minus green-plus blue-plus green-big"></div>
-      <div class="answer-grid__answer type4 blue-soft red-minus green-plus blue-plus green-big"></div>
-      <div class="answer-grid__answer type4 tan-soft red-minus green-plus blue-plus green-big"></div>
-      <div class="answer-grid__answer type4 red-soft red-minus green-plus blue-plus green-big"></div>
-      <div class="answer-grid__answer type4 dimgray-soft red-minus green-plus blue-plus green-big"></div>
+      <div class="answer-grid__answer type4 purple-soft red-minus green-plus blue-plus green-big">
+        <img src="elements/rs-GL+bs+.svg">
+      </div>
+      <div class="answer-grid__answer type4 green-soft red-minus green-plus blue-plus green-big">
+        <img src="elements/rs-GL+bs+.svg">
+      </div>
+      <div class="answer-grid__answer type4 sienna-soft red-minus green-plus blue-plus green-big">
+        <img src="elements/rs-GL+bs+.svg">
+      </div>
+      <div class="answer-grid__answer type4 gold-soft red-minus green-plus blue-plus green-big">
+        <img src="elements/rs-GL+bs+.svg">
+      </div>
+      <div class="answer-grid__answer type4 blue-soft red-minus green-plus blue-plus green-big">
+        <img src="elements/rs-GL+bs+.svg">
+      </div>
+      <div class="answer-grid__answer type4 tan-soft red-minus green-plus blue-plus green-big">
+        <img src="elements/rs-GL+bs+.svg">
+      </div>
+      <div class="answer-grid__answer type4 red-soft red-minus green-plus blue-plus green-big">
+        <img src="elements/rs-GL+bs+.svg">
+      </div>
+      <div class="answer-grid__answer type4 dimgray-soft red-minus green-plus blue-plus green-big">
+        <img src="elements/rs-GL+bs+.svg">
+      </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type5 purple-soft red-minus green-minus blue-plus red-big"></div>
-      <div class="answer-grid__answer type5 green-soft red-minus green-minus blue-plus red-big"></div>
-      <div class="answer-grid__answer type5 sienna-soft red-minus green-minus blue-plus red-big"></div>
-      <div class="answer-grid__answer type5 gold-soft red-minus green-minus blue-plus red-big"></div>
-      <div class="answer-grid__answer type5 blue-soft red-minus green-minus blue-plus red-big"></div>
-      <div class="answer-grid__answer type5 tan-soft red-minus green-minus blue-plus red-big"></div>
-      <div class="answer-grid__answer type5 red-soft red-minus green-minus blue-plus red-big"></div>
-      <div class="answer-grid__answer type5 dimgray-soft red-minus green-minus blue-plus red-big"></div>
+      <div class="answer-grid__answer type5 purple-soft red-minus green-minus blue-plus red-large">
+        <img src="elements/RL-gs-bs+.svg">
+      </div>
+      <div class="answer-grid__answer type5 green-soft red-minus green-minus blue-plus red-large">
+        <img src="elements/RL-gs-bs+.svg">
+      </div>
+      <div class="answer-grid__answer type5 sienna-soft red-minus green-minus blue-plus red-large">
+        <img src="elements/RL-gs-bs+.svg">
+      </div>
+      <div class="answer-grid__answer type5 gold-soft red-minus green-minus blue-plus red-large">
+        <img src="elements/RL-gs-bs+.svg">
+      </div>
+      <div class="answer-grid__answer type5 blue-soft red-minus green-minus blue-plus red-large">
+        <img src="elements/RL-gs-bs+.svg">
+      </div>
+      <div class="answer-grid__answer type5 tan-soft red-minus green-minus blue-plus red-large">
+        <img src="elements/RL-gs-bs+.svg">
+      </div>
+      <div class="answer-grid__answer type5 red-soft red-minus green-minus blue-plus red-large">
+        <img src="elements/RL-gs-bs+.svg">
+      </div>
+      <div class="answer-grid__answer type5 dimgray-soft red-minus green-minus blue-plus red-large">
+        <img src="elements/RL-gs-bs+.svg">
+      </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type6 purple-soft red-plus green-plus blue-minus red-big"></div>
-      <div class="answer-grid__answer type6 green-soft red-plus green-plus blue-minus red-big"></div>
-      <div class="answer-grid__answer type6 sienna-soft red-plus green-plus blue-minus red-big"></div>
-      <div class="answer-grid__answer type6 gold-soft red-plus green-plus blue-minus red-big"></div>
-      <div class="answer-grid__answer type6 blue-soft red-plus green-plus blue-minus red-big"></div>
-      <div class="answer-grid__answer type6 tan-soft red-plus green-plus blue-minus red-big"></div>
-      <div class="answer-grid__answer type6 red-soft red-plus green-plus blue-minus red-big"></div>
-      <div class="answer-grid__answer type6 dimgray-soft red-plus green-plus blue-minus red-big"></div>
+      <div class="answer-grid__answer type6 purple-soft red-plus green-plus blue-minus red-large">
+        <img src="elements/RL+gs+bs-.svg">
+      </div>
+      <div class="answer-grid__answer type6 green-soft red-plus green-plus blue-minus red-large">
+        <img src="elements/RL+gs+bs-.svg">
+      </div>
+      <div class="answer-grid__answer type6 sienna-soft red-plus green-plus blue-minus red-large">
+        <img src="elements/RL+gs+bs-.svg">
+      </div>
+      <div class="answer-grid__answer type6 gold-soft red-plus green-plus blue-minus red-large">
+        <img src="elements/RL+gs+bs-.svg">
+      </div>
+      <div class="answer-grid__answer type6 blue-soft red-plus green-plus blue-minus red-large">
+        <img src="elements/RL+gs+bs-.svg">
+      </div>
+      <div class="answer-grid__answer type6 tan-soft red-plus green-plus blue-minus red-large">
+        <img src="elements/RL+gs+bs-.svg">
+      </div>
+      <div class="answer-grid__answer type6 red-soft red-plus green-plus blue-minus red-large">
+        <img src="elements/RL+gs+bs-.svg">
+      </div>
+      <div class="answer-grid__answer type6 dimgray-soft red-plus green-plus blue-minus red-large">
+        <img src="elements/RL+gs+bs-.svg">
+      </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type7 purple-soft red-minus green-minus blue-minus all-big"></div>
-      <div class="answer-grid__answer type7 green-soft red-minus green-minus blue-minus all-big"></div>
-      <div class="answer-grid__answer type7 sienna-soft red-minus green-minus blue-minus all-big"></div>
-      <div class="answer-grid__answer type7 gold-soft red-minus green-minus blue-minus all-big"></div>
-      <div class="answer-grid__answer type7 blue-soft red-minus green-minus blue-minus all-big"></div>
-      <div class="answer-grid__answer type7 tan-soft red-minus green-minus blue-minus all-big"></div>
-      <div class="answer-grid__answer type7 red-soft red-minus green-minus blue-minus all-big"></div>
-      <div class="answer-grid__answer type7 dimgray-soft red-minus green-minus blue-minus all-big"></div>
+      <div class="answer-grid__answer type7 purple-soft red-minus green-minus blue-minus all-small">
+        <img src="elements/rs-gs-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type7 green-soft red-minus green-minus blue-minus all-small">
+        <img src="elements/rs-gs-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type7 sienna-soft red-minus green-minus blue-minus all-small">
+        <img src="elements/rs-gs-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type7 gold-soft red-minus green-minus blue-minus all-small">
+        <img src="elements/rs-gs-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type7 blue-soft red-minus green-minus blue-minus all-small">
+        <img src="elements/rs-gs-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type7 tan-soft red-minus green-minus blue-minus all-small">
+        <img src="elements/rs-gs-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type7 red-soft red-minus green-minus blue-minus all-small">
+        <img src="elements/rs-gs-bs-.svg">
+      </div>
+      <div class="answer-grid__answer type7 dimgray-soft red-minus green-minus blue-minus all-small">
+        <img src="elements/rs-gs-bs-.svg">
+      </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type8 purple-soft red-plus green-plus blue-plus all-big"></div>
-      <div class="answer-grid__answer type8 green-soft red-plus green-plus blue-plus all-big"></div>
-      <div class="answer-grid__answer type8 sienna-soft red-plus green-plus blue-plus all-big"></div>
-      <div class="answer-grid__answer type8 gold-soft red-plus green-plus blue-plus all-big"></div>
-      <div class="answer-grid__answer type8 blue-soft red-plus green-plus blue-plus all-big"></div>
-      <div class="answer-grid__answer type8 tan-soft red-plus green-plus blue-plus all-big"></div>
-      <div class="answer-grid__answer type8 red-soft red-plus green-plus blue-plus all-big"></div>
-      <div class="answer-grid__answer type8 dimgray-soft red-plus green-plus blue-plus all-big"></div>
+      <div class="answer-grid__answer type8 purple-soft red-plus green-plus blue-plus all-large">
+        <img src="elements/RL+GL+BL+.svg">
+      </div>
+      <div class="answer-grid__answer type8 green-soft red-plus green-plus blue-plus all-large">
+        <img src="elements/RL+GL+BL+.svg">
+      </div>
+      <div class="answer-grid__answer type8 sienna-soft red-plus green-plus blue-plus all-large">
+        <img src="elements/RL+GL+BL+.svg">
+      </div>
+      <div class="answer-grid__answer type8 gold-soft red-plus green-plus blue-plus all-large">
+        <img src="elements/RL+GL+BL+.svg">
+      </div>
+      <div class="answer-grid__answer type8 blue-soft red-plus green-plus blue-plus all-large">
+        <img src="elements/RL+GL+BL+.svg">
+      </div>
+      <div class="answer-grid__answer type8 tan-soft red-plus green-plus blue-plus all-large">
+        <img src="elements/RL+GL+BL+.svg">
+      </div>
+      <div class="answer-grid__answer type8 red-soft red-plus green-plus blue-plus all-large">
+        <img src="elements/RL+GL+BL+.svg">
+      </div>
+      <div class="answer-grid__answer type8 dimgray-soft red-plus green-plus blue-plus all-large">
+        <img src="elements/RL+GL+BL+.svg">
+      </div>
     </div>
   </div>
 </body>
