can mark color-polarities false

--- a/index.html
+++ b/index.html
@@ -187,223 +187,239 @@
     </div>
     
     <div class="results-tree__row">
-      <div class="results-tree__element bubble key mushroom mushroom-left mushroom-right">M</div>
-      <div class="results-tree__element bubble key fern fern-left fern-right">G</div>
-      <div class="results-tree__element bubble key toad toad-left toad-right">T</div>
-      <div class="results-tree__element bubble key foot foot-left foot-right">C</div>
-      <div class="results-tree__element bubble key flower flower-left flower-right">F</div>
-      <div class="results-tree__element bubble key root root-left root-right">R</div>
-      <div class="results-tree__element bubble key scorpion scorpion-left scorpion-right">S</div>
-      <div class="results-tree__element bubble key feather feather-left feather-right">B</div>
+      <div class="results-tree__element bubble key mushroom mushroom-left mushroom-right">
+        <div class="icon"></div>
+      </div>
+      <div class="results-tree__element bubble key fern fern-left fern-right">
+        <div class="icon"></div>
+      </div>
+      <div class="results-tree__element bubble key toad toad-left toad-right">
+        <div class="icon"></div>
+      </div>
+      <div class="results-tree__element bubble key foot foot-left foot-right">
+        <div class="icon"></div>
+      </div>
+      <div class="results-tree__element bubble key flower flower-left flower-right">
+        <div class="icon"></div>
+      </div>
+      <div class="results-tree__element bubble key root root-left root-right">
+        <div class="icon"></div>
+      </div>
+      <div class="results-tree__element bubble key scorpion scorpion-left scorpion-right">
+        <div class="icon"></div>
+      </div>
+      <div class="results-tree__element bubble key feather feather-left feather-right">
+        <div class="icon"></div>
+      </div>
     </div>
     
   </div>
   <div id="grid" class="answer-grid">
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type1 mushroom red-minus green-plus blue-minus blue-big false">
+      <div class="answer-grid__answer type1 mushroom redminus greenplus blueminus bluebig false">
         <img src="elements/rs-gs+BL-.svg">
       </div>
-      <div class="answer-grid__answer type1 fern red-minus green-plus blue-minus blue-big false">
+      <div class="answer-grid__answer type1 fern redminus greenplus blueminus bluebig false">
         <img src="elements/rs-gs+BL-.svg">
       </div>
-      <div class="answer-grid__answer type1 toad red-minus green-plus blue-minus blue-big false">
+      <div class="answer-grid__answer type1 toad redminus greenplus blueminus bluebig false">
         <img src="elements/rs-gs+BL-.svg">
       </div>
-      <div class="answer-grid__answer type1 foot red-minus green-plus blue-minus blue-big false">
+      <div class="answer-grid__answer type1 foot redminus greenplus blueminus bluebig false">
         <img src="elements/rs-gs+BL-.svg">
       </div>
-      <div class="answer-grid__answer type1 flower red-minus green-plus blue-minus blue-big false">
+      <div class="answer-grid__answer type1 flower redminus greenplus blueminus bluebig false">
         <img src="elements/rs-gs+BL-.svg">
       </div>
-      <div class="answer-grid__answer type1 root red-minus green-plus blue-minus blue-big false">
+      <div class="answer-grid__answer type1 root redminus greenplus blueminus bluebig false">
         <img src="elements/rs-gs+BL-.svg">
       </div>
-      <div class="answer-grid__answer type1 scorpion red-minus green-plus blue-minus blue-big false">
+      <div class="answer-grid__answer type1 scorpion redminus greenplus blueminus bluebig false">
         <img src="elements/rs-gs+BL-.svg">
       </div>
-      <div class="answer-grid__answer type1 feather red-minus green-plus blue-minus blue-big false guess">
-        <img src="elements/rs-gs+BL-.svg">
+      <div class="answer-grid__answer type1 feather redminus greenplus blueminus bluebig false">
+        <img src="elements/rs-gs+BL-.svg" class="guess">
       </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type2 mushroom red-plus green-minus blue-plus blue-big true">
+      <div class="answer-grid__answer type2 mushroom redplus greenminus blueplus bluebig true">
         <img src="elements/rs+gs-BL+.svg">
       </div>
-      <div class="answer-grid__answer type2 fern red-plus green-minus blue-plus blue-big true">
+      <div class="answer-grid__answer type2 fern redplus greenminus blueplus bluebig true">
         <img src="elements/rs+gs-BL+.svg">
       </div>
-      <div class="answer-grid__answer type2 toad red-plus green-minus blue-plus blue-big true">
+      <div class="answer-grid__answer type2 toad redplus greenminus blueplus bluebig true">
         <img src="elements/rs+gs-BL+.svg">
       </div>
-      <div class="answer-grid__answer type2 foot red-plus green-minus blue-plus blue-big true">
+      <div class="answer-grid__answer type2 foot redplus greenminus blueplus bluebig true">
         <img src="elements/rs+gs-BL+.svg">
       </div>
-      <div class="answer-grid__answer type2 flower red-plus green-minus blue-plus blue-big true guess">
+      <div class="answer-grid__answer type2 flower redplus greenminus blueplus bluebig true">
+        <img src="elements/rs+gs-BL+.svg" class="guess">
+      </div>
+      <div class="answer-grid__answer type2 root redplus greenminus blueplus bluebig true">
         <img src="elements/rs+gs-BL+.svg">
       </div>
-      <div class="answer-grid__answer type2 root red-plus green-minus blue-plus blue-big true">
+      <div class="answer-grid__answer type2 scorpion redplus greenminus blueplus bluebig true">
         <img src="elements/rs+gs-BL+.svg">
       </div>
-      <div class="answer-grid__answer type2 scorpion red-plus green-minus blue-plus blue-big true">
-        <img src="elements/rs+gs-BL+.svg">
-      </div>
-      <div class="answer-grid__answer type2 feather red-plus green-minus blue-plus blue-big true">
+      <div class="answer-grid__answer type2 feather redplus greenminus blueplus bluebig true">
         <img src="elements/rs+gs-BL+.svg">
       </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type3 mushroom red-plus green-minus blue-minus green-big">
+      <div class="answer-grid__answer type3 mushroom redplus greenminus blueminus greenbig">
         <img src="elements/rs+GL-bs-.svg">
       </div>
-      <div class="answer-grid__answer type3 fern red-plus green-minus blue-minus green-big">
+      <div class="answer-grid__answer type3 fern redplus greenminus blueminus greenbig">
         <img src="elements/rs+GL-bs-.svg">
       </div>
-      <div class="answer-grid__answer type3 toad red-plus green-minus blue-minus green-big">
+      <div class="answer-grid__answer type3 toad redplus greenminus blueminus greenbig">
         <img src="elements/rs+GL-bs-.svg">
       </div>
-      <div class="answer-grid__answer type3 foot red-plus green-minus blue-minus green-big">
+      <div class="answer-grid__answer type3 foot redplus greenminus blueminus greenbig">
         <img src="elements/rs+GL-bs-.svg">
       </div>
-      <div class="answer-grid__answer type3 flower red-plus green-minus blue-minus green-big">
+      <div class="answer-grid__answer type3 flower redplus greenminus blueminus greenbig">
         <img src="elements/rs+GL-bs-.svg">
       </div>
-      <div class="answer-grid__answer type3 root red-plus green-minus blue-minus green-big">
+      <div class="answer-grid__answer type3 root redplus greenminus blueminus greenbig">
         <img src="elements/rs+GL-bs-.svg">
       </div>
-      <div class="answer-grid__answer type3 scorpion red-plus green-minus blue-minus green-big">
+      <div class="answer-grid__answer type3 scorpion redplus greenminus blueminus greenbig">
         <img src="elements/rs+GL-bs-.svg">
       </div>
-      <div class="answer-grid__answer type3 feather red-plus green-minus blue-minus green-big">
+      <div class="answer-grid__answer type3 feather redplus greenminus blueminus greenbig">
         <img src="elements/rs+GL-bs-.svg">
       </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type4 mushroom red-minus green-plus blue-plus green-big">
+      <div class="answer-grid__answer type4 mushroom redminus greenplus blueplus greenbig">
         <img src="elements/rs-GL+bs+.svg">
       </div>
-      <div class="answer-grid__answer type4 fern red-minus green-plus blue-plus green-big">
+      <div class="answer-grid__answer type4 fern redminus greenplus blueplus greenbig">
         <img src="elements/rs-GL+bs+.svg">
       </div>
-      <div class="answer-grid__answer type4 toad red-minus green-plus blue-plus green-big">
+      <div class="answer-grid__answer type4 toad redminus greenplus blueplus greenbig">
         <img src="elements/rs-GL+bs+.svg">
       </div>
-      <div class="answer-grid__answer type4 foot red-minus green-plus blue-plus green-big">
+      <div class="answer-grid__answer type4 foot redminus greenplus blueplus greenbig">
         <img src="elements/rs-GL+bs+.svg">
       </div>
-      <div class="answer-grid__answer type4 flower red-minus green-plus blue-plus green-big">
+      <div class="answer-grid__answer type4 flower redminus greenplus blueplus greenbig">
         <img src="elements/rs-GL+bs+.svg">
       </div>
-      <div class="answer-grid__answer type4 root red-minus green-plus blue-plus green-big">
+      <div class="answer-grid__answer type4 root redminus greenplus blueplus greenbig">
         <img src="elements/rs-GL+bs+.svg">
       </div>
-      <div class="answer-grid__answer type4 scorpion red-minus green-plus blue-plus green-big">
+      <div class="answer-grid__answer type4 scorpion redminus greenplus blueplus greenbig">
         <img src="elements/rs-GL+bs+.svg">
       </div>
-      <div class="answer-grid__answer type4 feather red-minus green-plus blue-plus green-big">
+      <div class="answer-grid__answer type4 feather redminus greenplus blueplus greenbig">
         <img src="elements/rs-GL+bs+.svg">
       </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type5 mushroom red-minus green-minus blue-plus red-large">
+      <div class="answer-grid__answer type5 mushroom redminus greenminus blueplus redbig">
         <img src="elements/RL-gs-bs+.svg">
       </div>
-      <div class="answer-grid__answer type5 fern red-minus green-minus blue-plus red-large">
+      <div class="answer-grid__answer type5 fern redminus greenminus blueplus redbig">
         <img src="elements/RL-gs-bs+.svg">
       </div>
-      <div class="answer-grid__answer type5 toad red-minus green-minus blue-plus red-large">
+      <div class="answer-grid__answer type5 toad redminus greenminus blueplus redbig">
         <img src="elements/RL-gs-bs+.svg">
       </div>
-      <div class="answer-grid__answer type5 foot red-minus green-minus blue-plus red-large">
+      <div class="answer-grid__answer type5 foot redminus greenminus blueplus redbig">
         <img src="elements/RL-gs-bs+.svg">
       </div>
-      <div class="answer-grid__answer type5 flower red-minus green-minus blue-plus red-large">
+      <div class="answer-grid__answer type5 flower redminus greenminus blueplus redbig">
         <img src="elements/RL-gs-bs+.svg">
       </div>
-      <div class="answer-grid__answer type5 root red-minus green-minus blue-plus red-large">
+      <div class="answer-grid__answer type5 root redminus greenminus blueplus redbig">
         <img src="elements/RL-gs-bs+.svg">
       </div>
-      <div class="answer-grid__answer type5 scorpion red-minus green-minus blue-plus red-large">
+      <div class="answer-grid__answer type5 scorpion redminus greenminus blueplus redbig">
         <img src="elements/RL-gs-bs+.svg">
       </div>
-      <div class="answer-grid__answer type5 feather red-minus green-minus blue-plus red-large">
+      <div class="answer-grid__answer type5 feather redminus greenminus blueplus redbig">
         <img src="elements/RL-gs-bs+.svg">
       </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type6 mushroom red-plus green-plus blue-minus red-large">
+      <div class="answer-grid__answer type6 mushroom redplus greenplus blueminus redbig">
         <img src="elements/RL+gs+bs-.svg">
       </div>
-      <div class="answer-grid__answer type6 fern red-plus green-plus blue-minus red-large">
+      <div class="answer-grid__answer type6 fern redplus greenplus blueminus redbig">
         <img src="elements/RL+gs+bs-.svg">
       </div>
-      <div class="answer-grid__answer type6 toad red-plus green-plus blue-minus red-large">
+      <div class="answer-grid__answer type6 toad redplus greenplus blueminus redbig">
         <img src="elements/RL+gs+bs-.svg">
       </div>
-      <div class="answer-grid__answer type6 foot red-plus green-plus blue-minus red-large">
+      <div class="answer-grid__answer type6 foot redplus greenplus blueminus redbig">
         <img src="elements/RL+gs+bs-.svg">
       </div>
-      <div class="answer-grid__answer type6 flower red-plus green-plus blue-minus red-large">
+      <div class="answer-grid__answer type6 flower redplus greenplus blueminus redbig">
         <img src="elements/RL+gs+bs-.svg">
       </div>
-      <div class="answer-grid__answer type6 root red-plus green-plus blue-minus red-large">
+      <div class="answer-grid__answer type6 root redplus greenplus blueminus redbig">
         <img src="elements/RL+gs+bs-.svg">
       </div>
-      <div class="answer-grid__answer type6 scorpion red-plus green-plus blue-minus red-large">
+      <div class="answer-grid__answer type6 scorpion redplus greenplus blueminus redbig">
         <img src="elements/RL+gs+bs-.svg">
       </div>
-      <div class="answer-grid__answer type6 feather red-plus green-plus blue-minus red-large">
+      <div class="answer-grid__answer type6 feather redplus greenplus blueminus redbig">
         <img src="elements/RL+gs+bs-.svg">
       </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type7 mushroom red-minus green-minus blue-minus all-small">
+      <div class="answer-grid__answer type7 mushroom redminus greenminus blueminus all-small">
         <img src="elements/rs-gs-bs-.svg">
       </div>
-      <div class="answer-grid__answer type7 fern red-minus green-minus blue-minus all-small">
+      <div class="answer-grid__answer type7 fern redminus greenminus blueminus all-small">
         <img src="elements/rs-gs-bs-.svg">
       </div>
-      <div class="answer-grid__answer type7 toad red-minus green-minus blue-minus all-small">
+      <div class="answer-grid__answer type7 toad redminus greenminus blueminus all-small">
         <img src="elements/rs-gs-bs-.svg">
       </div>
-      <div class="answer-grid__answer type7 foot red-minus green-minus blue-minus all-small">
+      <div class="answer-grid__answer type7 foot redminus greenminus blueminus all-small">
         <img src="elements/rs-gs-bs-.svg">
       </div>
-      <div class="answer-grid__answer type7 flower red-minus green-minus blue-minus all-small">
+      <div class="answer-grid__answer type7 flower redminus greenminus blueminus all-small">
         <img src="elements/rs-gs-bs-.svg">
       </div>
-      <div class="answer-grid__answer type7 root red-minus green-minus blue-minus all-small">
+      <div class="answer-grid__answer type7 root redminus greenminus blueminus all-small">
         <img src="elements/rs-gs-bs-.svg">
       </div>
-      <div class="answer-grid__answer type7 scorpion red-minus green-minus blue-minus all-small">
+      <div class="answer-grid__answer type7 scorpion redminus greenminus blueminus all-small">
         <img src="elements/rs-gs-bs-.svg">
       </div>
-      <div class="answer-grid__answer type7 feather red-minus green-minus blue-minus all-small">
+      <div class="answer-grid__answer type7 feather redminus greenminus blueminus all-small">
         <img src="elements/rs-gs-bs-.svg">
       </div>
     </div>
     <div class="answer-grid__row">
-      <div class="answer-grid__answer type8 mushroom red-plus green-plus blue-plus all-large">
+      <div class="answer-grid__answer type8 mushroom redplus greenplus blueplus all-large">
         <img src="elements/RL+GL+BL+.svg">
       </div>
-      <div class="answer-grid__answer type8 fern red-plus green-plus blue-plus all-large">
+      <div class="answer-grid__answer type8 fern redplus greenplus blueplus all-large">
         <img src="elements/RL+GL+BL+.svg">
       </div>
-      <div class="answer-grid__answer type8 toad red-plus green-plus blue-plus all-large">
+      <div class="answer-grid__answer type8 toad redplus greenplus blueplus all-large">
         <img src="elements/RL+GL+BL+.svg">
       </div>
-      <div class="answer-grid__answer type8 foot red-plus green-plus blue-plus all-large">
+      <div class="answer-grid__answer type8 foot redplus greenplus blueplus all-large">
         <img src="elements/RL+GL+BL+.svg">
       </div>
-      <div class="answer-grid__answer type8 flower red-plus green-plus blue-plus all-large">
+      <div class="answer-grid__answer type8 flower redplus greenplus blueplus all-large">
         <img src="elements/RL+GL+BL+.svg">
       </div>
-      <div class="answer-grid__answer type8 root red-plus green-plus blue-plus all-large">
+      <div class="answer-grid__answer type8 root redplus greenplus blueplus all-large">
         <img src="elements/RL+GL+BL+.svg">
       </div>
-      <div class="answer-grid__answer type8 scorpion red-plus green-plus blue-plus all-large">
+      <div class="answer-grid__answer type8 scorpion redplus greenplus blueplus all-large">
         <img src="elements/RL+GL+BL+.svg">
       </div>
-      <div class="answer-grid__answer type8 feather red-plus green-plus blue-plus all-large">
+      <div class="answer-grid__answer type8 feather redplus greenplus blueplus all-large">
         <img src="elements/RL+GL+BL+.svg">
       </div>
     </div>
